--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="data-address" content="1115 NORTH PACIFIC AVENUE H,
 GLENDALE, CA 91202"><meta name="data-map" content="1115+NORTH+PACIFIC+AVENUE+H,+GLENDALE,+CA+91202">
   <meta name="description" content="Dedicated to community services, education, and direct relief, FLARE OF HOPE collaborates with neighbors and partners to deliver practical help and long-term impact.">
+<meta name="facebook-domain-verification" content="p5ftrjnxvgu8nig7och467hyme73lg" />
 </head>
 <body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
